--- a/clientessmais/user/templates/home.html
+++ b/clientessmais/user/templates/home.html
@@ -4,10 +4,10 @@
 </head>
 
 <body>
-  <center><h1>Bem Vindo!</h1></center><br>
+  <center><h1>Home Page</h1></center><br>
 
-  <a href="{% url 'login_client' %} ">Login</a><br>
-  <a href="{% url 'register_client_view' %} ">Cadastre-se agora!</a>
+  <center><a href="{% url 'login_client' %} ">Login</a></center><br>
+  <center><a href="{% url 'register_client_view' %} ">Cadastre-se agora!</a></center>
 
 </body>
 
