--- a/clientessmais/user/templates/login_client.html
+++ b/clientessmais/user/templates/login_client.html
@@ -4,10 +4,8 @@
 </head>
 
 <body>
-
+    <center><h1>Login</h1></center>
     <div>
-        <br>
-        <br>
         <div class="row" >
             <div class="form" >
                 <br>
